UPDATE: funcao editar sala e aluno implementada

--- a/src/views/editarSalas.ejs
+++ b/src/views/editarSalas.ejs
@@ -9,7 +9,7 @@
     <link rel="icon" href="img/Bosch-Logo2.png">
 
     <link rel="icon" type="image" href="/bzo/media/css/img/favicon.png" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/editar.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,76 +25,29 @@
                 <h2 class="keyword-title">CONTROLE</h2>
                 <h2>de Estudantes</h2>
             </div>
-            <div class="">
-                <div class="HeaderFunctions">
-                    <h3>Cadastrar:</h3>
-                    <a href="javascript: AbrirCadastro('CadastroAluno')">
-                        <h4>Alunos</h4>
-                    </a>
-                    <h3>|</h3>
-                    <a href="javascript: AbrirCadastro('CadastroSala')">
-                        <h4>Sala</h4>
-                    </a>
-                </div>
-            </div>
         </div>
     </header>
 
-    <main onclick="CleanScreen()">
-        <div class="SelectSala">
-            <h5>Sala de Aula</h5>
-            <form method="post">
-                <select name="SelectSala" onchange="this.form.submit()" id="SelectSala">
-                    <option value="">Escolha uma Sala</option>
-                    <% for(let i=0; i < salas.length; i++){ %>
-                        <option value='<%= salas[i].IDSala %>' <%=id==salas[i].IDSala ? 'selected' : '' %>>
-                            <%= salas[i].Nome %>
-                        </option>
-                        <% } %>
-                </select>
-            </form>
-
-        </div>
-        <div class="dadosSala">
-            <div>
-                <form action="/editarSalas/<%= id %> " method="get">
-                    <button>
-                        <h3>Editar Sala</h3>
-                    </button>
-                </form>
-
-                <p><% let a = 0; let b = 12 ;%> 
-                    <% for(let i=0; i<alunos.length; i++) {%> 
-                    <% a+=1 %> 
-                    <% } %> 
-                    <% for(let i=0; i<salas.length; i++) {%> 
-                    <% if(salas[i].IDSala == id){ b = salas[i].Capacidade}%> 
-                    <% } %> 
-                    <%= b-a %> Vagas disponiveis</p>
-            </div>
-        </div>
-        <div id="Sala" class="Sala">
-            <h2>Alunos </h2>
-            <div class="AlunosNaSala">
-                <% for(let i=0; i < alunos.length; i++){ %>
-                    <div class="AlunoCard">
-                        <div class="Profile">
-                            <img src="img/<%= alunos[i].Foto %>" alt="<%= alunos[i].Foto %>" class="ProfileAvatar">
-                        </div>
-                        <div class="Info">
-                            <h3>
-                                <%= alunos[i].Nome %>
-                            </h3>
-                            <p>Idade: <%= alunos[i].Idade %>
-                            </p>
-                            <form action="/editarAluno/<%= alunos[i].IDAluno %> " method="get">
-                                <button class="Button">Editar</button>
-                            </form>
-                        </div>
+    <main>
+        <div id="AtualizaSala" class="Cadastro">
+            <form action="/editarSalas/<%= salas.IDSala %> /" method="post">
+                <div class="Content">
+                    <h2>Editar Sala</h2>
+                    <div>
+                        <h4>Nome:</h4>
+                        <input type="text" class="CaixaDados" placeholder="Nome" name="nome"
+                            value="<% salas.Nome %> "></input>
                     </div>
-                    <% } %>
-            </div>
-        </div>
+                    <div>
+                        <h4>Capacidade:</h4>
+                        <input type="text" class="CaixaDados" placeholder="Capacidade" name="capacidade"
+                            value="<% salas.Capacidade %> "></input>
+                    </div>
+                    <button type="submit"><h3>Atualizar</h3></button>
+                </div>
+            </form>
+            <a href='/'><button><h3>Fechar</h3></button></a>
+
     </main>
 
 
@@ -102,70 +55,7 @@
 
 
 
-    <div id="CadastroSala" class="Cadastro">
-        <form action="/cadastroSala" method="post">
-            <div class="Content">
-                <h2>Cadastrar Nova Sala</h2>
-                <div>
-                    <h4>Nome:</h4>
-                    <input type="text" class="CaixaDados" placeholder="Nome" name="nome" required></input>
-                </div>
-                <div>
-                    <h4>Capacidade:</h4>
-                    <input type="text" class="CaixaDados" placeholder="Capacidade" name="capacidade" required></input>
-                </div>
-                <button type="submit">
-                    <h3>Cadastrar</h3>
-                </button>
-            </div>
-        </form>
-        <a href="javascript: FecharCadastro('CadastroSala')"><button>
-                <h3>Fechar</h3>
-            </button></a>
-
     </div>
-
-    <div id="CadastroAluno" class="Cadastro">
-        <div class="Content">
-            <form action="/cadastroAluno" method="post" enctype="multipart/form-data">
-                <h2>Cadastrar Novo Aluno</h2>
-                <img src="img/profile_avatar.jpg" alt="ProfileImg" class="ProfileAvatar" id="ProfileAvatar">
-                <input type="file" id="flImage" name="foto" accept="image/*">
-                <div>
-                    <h4>Nome:</h4>
-                    <input type="text" class="CaixaDados" placeholder="Nome" name="nome" required></input>
-                </div>
-                <div>
-                    <h4>Idade:</h4>
-                    <input type="text" class="CaixaDados" placeholder="Idade" name="idade" required></input>
-                </div>
-                <div>
-                    <h4>Sexo:</h4>
-                    <select id="Genero" class="CaixaDados" aria-placeholder="Sexo" name="sexo" required>
-                        <option value="Masculino">Masculino</option>
-                        <option value="Feminino">Feminino</option>
-                    </select>
-                </div>
-                <div>
-                    <h4>Sala:</h4>
-                    <select name="sala" id="" aria-placeholder="Sala" class="CaixaDados">
-                        <% for(let i=0; i < salas.length; i++){ %>
-                            <option value="<%= salas[i].IDSala %>">
-                                <%= salas[i].Nome %>
-                            </option>
-                            <% } %>
-                    </select>
-                </div>
-                <button type="submit">
-                    <h3>Cadastrar</h3>
-                </button>
-            </form>
-        </div>
-        <a href="javascript: FecharCadastro('CadastroAluno')"><button>
-                <h3>Fechar</h3>
-            </button></a>
-    </div>
-
 
     <footer>
         <div class="content">
