--- a/public/css/editar.css
+++ b/public/css/editar.css
@@ -3,8 +3,8 @@
     border: 0;
     padding: 0;
 }
-main{
-    min-height: 90vh;
+body{
+    height: 100%;
 }
 body button{
     box-shadow: 0px 0px 10px black;
@@ -80,67 +80,12 @@ header{
 
 main{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 15px;
-}
-.SelectSala{
-    width: 95%;
-    height: 50px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-#SelectSala{
-    background-color: transparent;
-    width: 100px;
-    text-align: center;
-    border: 5px;
-    margin-left: 15px;
-}
-.dadosSala{
-    width: 95%;
-    height: 50px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-.dadosSala div{
-    display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
+    /* align-items: center; */
     justify-content: center;
-    align-items: center;
-}
-.Sala{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.AlunosNaSala{
-    width: 95vw;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    
-}
-.AlunoCard{
-    background-color: rgb(241, 241, 241);
-    min-width: 300px;
-    width: 25%;
-    height: 300px;
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    gap: 15px;
-    border-radius: 15px;
-    box-shadow: -5px 5px 20px black;
-    transition: all 500ms;
-}
-.AlunoCard:hover{
-    scale: 1.25;
+    /* margin: 15px; */
+    height: calc(100vh - 100px);
+    width: 100%;
 }
 .Profile{
     display: flex;
@@ -174,12 +119,12 @@ main{
     background-color: rgb(247, 247, 247);
     top: 0;    bottom: 0;    left: 0;    right: 0;
     margin: auto;
-    max-width: 500px;
     height: 60vh;
-    min-width: 50px;
+    width: 50vw;
+    min-width: 250px;
     min-height: 550px;
-    display: none;
-    position: fixed;
+    display: flex;
+    border-top: 150px;
     border-radius: 10px;
     flex-direction: column;
     justify-content: center;
@@ -190,9 +135,8 @@ main{
     
 }
 .Cadastro .Content{
-    margin: 0;
     height: 90%;
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -200,11 +144,13 @@ main{
     gap: 15px;
 }
 .Content form{
+    width: auto;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 0px;
+    border: 0;
 }
 .Content div{
     height: 50px;
@@ -240,9 +186,10 @@ main{
 
 
 
+
 footer{
     width: 100%;
-    position: relative;
+    position: absolute;
     bottom: 0px;
     display: flex;
     flex-direction: column;
@@ -261,6 +208,7 @@ footer .content img{
     height: 50px;
     margin: 10px;
 }
+
 .BoschGradient{
     width: 100%;
     height: 1.5vh;
