--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     border: 0;
     padding: 0;
+    font-family: 'Fjalla One', sans-serif;
 }
 main{
     min-height: 90vh;
@@ -23,7 +24,7 @@ header{
     box-shadow: 0px 0px 15px black;
 }
 .header{
-    height: 60px;
+    min-height: 60px;
     width: 95vw;
     display: flex;
     justify-content: space-between;
@@ -34,6 +35,10 @@ header{
     align-items: flex-end;
     flex-wrap: wrap;
     gap: 4px;
+}
+.title{
+    display: flex;
+    flex-wrap: wrap;
 }
 .header .title{
     display: flex;
@@ -61,9 +66,17 @@ header{
 }
 .HeaderFunctions{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
     gap: 15px;
     text-align: center;
+}
+.HeaderFunctions div{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    align-items: center;
 }
 .HeaderFunctions a{
     text-decoration: none;
@@ -189,7 +202,6 @@ button:hover{
     height: 60vh;
     min-width: 50px;
     min-height: 550px;
-    display: none;
     position: fixed;
     border-radius: 10px;
     flex-direction: column;
